--- a/resources/assets/typescript/app.component.html
+++ b/resources/assets/typescript/app.component.html
@@ -1,2 +1,4 @@
-<p>Прогноз погоды в Москве.</p>
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
